Fixed scaling issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body{
 	margin: 20px;
   }
 
+  img{
+	max-width: 100% ;
+	height:auto;
+  }
   .custom-btn {
 	width: 130px;
 	height: 40px;
